--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -8,3 +8,84 @@ paragraph yellow: #ECB12F
 links blue: #2E71A6
 footer links grey: #454245
 */
+body {
+  background-color: #540b51;
+  overflow: scroll;
+}
+
+title {
+  color: #191817;
+}
+
+.intro img {
+  width: 100px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+}
+nav ul {
+  display: none;
+}
+nav button {
+  background-color: transparent;
+  border: unset;
+}
+
+div h1 {
+  color: white;
+  padding: 4rem;
+  font-size: 50px;
+  text-align: center;
+}
+
+p {
+  color: white;
+}
+
+p > span {
+  color: orange;
+}
+
+p {
+  text-align: center;
+}
+.signup {
+  display: flex;
+  flex-direction: column;
+}
+
+.signup button {
+  height: 3rem;
+}
+.signup img {
+  height: 20px;
+  width: 20px;
+}
+.signup #google {
+  background-color: #4285f4;
+}
+
+.photo img {
+  width: 600px;
+}
+.article p {
+  color: black;
+  font-size: 30px;
+}
+.article {
+  background-color: gray;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+.article img {
+  flex-wrap: wrap-reverse;
+  width: 135px;
+}
+.sect img {
+  width: 400px;
+}
